--- a/trangChu.html
+++ b/trangChu.html
@@ -12,14 +12,14 @@
     <div class="v3_1">
       <div class="v3_2">
         <img src="/images/v1_3.png" />
-        <div class="v3_3">Diễn đàn</div>
-        <div class="v3_3">Tiện ích</div>
-        <div class="v3_3">Thanh toán</div>
-        <div class="v3_3">Bảo trì</div>
+        <div class="v3_3">Forum</div>
+        <div class="v3_3">Services</div>
+        <div class="v3_3">Payment</div>
+        <div class="v3_3">Maintain</div>
       </div>
       <div class="v3_4">
         <div class="v3_5">
-          <div class="v3_3">Diễn đàn</div>
+          <div class="v3_3">Forum</div>
           <div class="v3_6">
             <img />
             <span></span>
