--- a/trangChu.html
+++ b/trangChu.html
@@ -6,26 +6,35 @@
       rel="stylesheet"
     />
     <link href="./css/main.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="//use.fontawesome.com/releases/v5.0.7/css/all.css"
+    />
     <title>Document</title>
   </head>
   <body>
     <div class="v3_1">
       <div class="v3_2">
         <img src="/images/v1_3.png" />
-        <div class="v3_3">Forum</div>
+        <div class="v3_3">News</div>
         <div class="v3_3">Services</div>
         <div class="v3_3">Payment</div>
         <div class="v3_3">Maintain</div>
+        <div class="v3_3">Contact</div>
+        <div class="v3_3">About us</div>
       </div>
       <div class="v3_4">
         <div class="v3_5">
-          <div class="v3_3">Forum</div>
-          <div class="v3_6">
-            <img />
-            <span></span>
+          <div class="v3_6">News</div>
+          <div class="v3_7">
+            <img src="/images/v3_7.jpg" />
+            <div class="v3_8">
+              <span class="v3_9">ARPHAM</span>
+              <span class="v3_10">Oaichua42@gmail.com</span>
+            </div>
           </div>
         </div>
-        <div class="v3_7"></div>
+        <div class="v3_11"></div>
       </div>
     </div>
   </body>
