--- a/trangChu.html
+++ b/trangChu.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
-      rel="stylesheet"
-    />
     <link href="./css/main.css" rel="stylesheet" />
     <link
       rel="stylesheet"
@@ -16,7 +12,7 @@
     <div class="v3_1">
       <div class="v3_2">
         <img src="/images/v1_3.png" />
-        <div class="v3_3">News</div>
+        <div class="v3_3" style="background-color: rgb(69, 169, 234)">News</div>
         <div class="v3_3">Services</div>
         <div class="v3_3">Payment</div>
         <div class="v3_3">Maintain</div>
@@ -37,5 +33,6 @@
         <div class="v3_11"></div>
       </div>
     </div>
+    <script src="/js/main.js"></script>
   </body>
 </html>
