--- a/logIn.html
+++ b/logIn.html
@@ -18,12 +18,20 @@
         <span class="v1_5">Tenant Management System</span>
         <span class="v1_6">Please Login your account.</span>
         <div class="v1_7">
-          <span class="v1_8">Email</span>
-          <input class="v1_9" type="text" placeholder="Enter your email ..." />
+          <label for="email" class="v1_8">Email</label>
+          <input
+            class="v1_9"
+            id="email"
+            type="text"
+            placeholder="Enter your email ..."
+          />
         </div>
         <div class="v1_7">
-          <span class="v1_8">Password</span>
-          <input class="v1_9" type="text" />
+          <label for="password" class="v1_8">Password</label>
+          <div class="v1_9_1">
+            <input class="v1_9_2" id="password" type="text" />
+            <img src="/images/v1_15.png" />
+          </div>
         </div>
         <div class="v2_1">
           <div class="v2_2">
@@ -32,7 +40,7 @@
           </div>
           <span class="v2_5">Forgot Password?</span>
         </div>
-        <a class="v1_16" href="/trangChu.html">Log In</a>
+        <button class="v1_16">Log In</button>
         <span class="v1_4">Or Continue With</span>
         <div class="v2_6">
           <a class="v2_7" href="#">
