--- a/test.html
+++ b/test.html
@@ -38,6 +38,6 @@
         <div class="v3_11"></div>
       </div>
     </div>
-    <script src="/js/main.js"></script>
+    <script src="/js/test.js"></script>
   </body>
 </html>
