--- a/register.html
+++ b/register.html
@@ -18,34 +18,43 @@
         <span class="v1_5">Tenant Management System</span>
         <span class="v1_6">Enter your information below to continue</span>
         <div class="v1_7">
-          <span class="v1_8">Email</span>
-          <input class="v1_9" type="text" placeholder="Enter your email ..." />
+          <label for="register_email" class="v1_8">Email</label>
+          <input
+            class="v1_9"
+            id="register_email"
+            type="text"
+            placeholder="Enter your email ..."
+          />
         </div>
         <div class="v1_10">
           <div class="v1_11">
-            <span class="v1_12">First name</span>
-            <input class="v1_13" type="text" />
+            <label for="register_firstName" class="v1_12">First name</label>
+            <input id="register_firstName" class="v1_13" type="text" />
           </div>
           <div class="v1_11">
-            <span class="v1_12">Last name</span>
-            <input class="v1_13" type="text" />
+            <label for="register_lastName" class="v1_12">Last name</label>
+            <input id="register_lastName" class="v1_13" type="text" />
           </div>
           <div class="v1_11">
-            <span class="v1_12">Create Password</span>
+            <label for="register_createPassword" class="v1_12"
+              >Create Password</label
+            >
             <div class="v1_14">
-              <input class="v1_15" type="text" />
-              <img src="/images/v1_15.png" width="24px" height="24px" />
+              <input id="register_createPassword" class="v1_15" type="text" />
+              <img src="/images/v1_15.png" />
             </div>
           </div>
           <div class="v1_11">
-            <span class="v1_12">Confirm Password</span>
+            <label for="congister_confirmPassword" class="v1_12"
+              >Confirm Password</label
+            >
             <div class="v1_14">
-              <input class="v1_15" type="text" />
-              <img src="/images/v1_15.png" width="24px" height="24px" />
+              <input id="congister_confirmPassword" class="v1_15" type="text" />
+              <img src="/images/v1_15.png" />
             </div>
           </div>
         </div>
-        <a class="v1_16" href="/logIn.html">Create Account</a>
+        <button class="v1_16">Create Account</button>
       </div>
     </div>
   </body>
