--- a/trangChu.html
+++ b/trangChu.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link href="./css/main.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
     <link
       rel="stylesheet"
       href="//use.fontawesome.com/releases/v5.0.7/css/all.css"
@@ -11,7 +12,7 @@
   <body>
     <div class="v3_1">
       <div class="v3_2">
-        <img src="/images/v1_3.png" />
+        <img src="./images/v1_3.png" />
         <div
           class="v3_3"
           style="background-color: rgb(69, 169, 234); color: white"
@@ -28,7 +29,7 @@
         <div class="v3_5">
           <div class="v3_6">News</div>
           <div class="v3_7">
-            <img src="/images/v3_7.jpg" />
+            <img src="./images/v3_7.jpg" />
             <div class="v3_8">
               <span class="v3_9">ARPHAM</span>
               <span class="v3_10">Oaichua42@gmail.com</span>
@@ -38,6 +39,6 @@
         <div class="v3_11"></div>
       </div>
     </div>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
