--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="//use.fontawesome.com/releases/v5.0.7/css/all.css"
     />
-    <title>Document</title>
+    <title>Homepage</title>
   </head>
   <body>
     <div class="v3_1">
