--- a/register.html
+++ b/register.html
@@ -29,11 +29,11 @@
         <div class="v1_10">
           <div class="v1_11">
             <label for="register_firstName" class="v1_12">First name</label>
-            <input id="register_firstName" class="v1_13" type="text" />
+            <input id="register_firstName" class="v1_13" type="text" required />
           </div>
           <div class="v1_11">
             <label for="register_lastName" class="v1_12">Last name</label>
-            <input id="register_lastName" class="v1_13" type="text" />
+            <input id="register_lastName" class="v1_13" type="text" required />
           </div>
           <div class="v1_11">
             <label for="register_createPassword" class="v1_12"
