--- a/test.html
+++ b/test.html
@@ -2,42 +2,49 @@
 <html>
   <head>
     <link href="./css/main.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
     <link
       rel="stylesheet"
       href="//use.fontawesome.com/releases/v5.0.7/css/all.css"
     />
-    <title>Document</title>
+    <title>Homepage</title>
   </head>
   <body>
     <div class="v3_1">
       <div class="v3_2">
-        <img src="/images/v1_3.png" />
+        <img src="./images/v1_3.png" />
         <div
           class="v3_3"
-          style="background-color: rgb(69, 169, 234); color: white"
+          style="background-color: rgb(116, 175, 117); color: white"
         >
           News
         </div>
         <div class="v3_3">Services</div>
         <div class="v3_3">Payment</div>
-        <div class="v3_3">Maintain</div>
-        <div class="v3_3">Contact</div>
         <div class="v3_3">About us</div>
       </div>
       <div class="v3_4">
         <div class="v3_5">
           <div class="v3_6">News</div>
           <div class="v3_7">
-            <img src="/images/v3_7.jpg" />
+            <img src="./images/v3_7.jpg" />
             <div class="v3_8">
               <span class="v3_9">ARPHAM</span>
               <span class="v3_10">Oaichua42@gmail.com</span>
             </div>
           </div>
         </div>
-        <div class="v3_11"></div>
+        <div class="v3_11">
+          <div class="services_form_1">
+            <div class="services_form_1_1"><</div>
+            <div class="services_form_1_2">FORM DANG KI DANG KY DICH VU</div>
+          </div>
+          <div class="services_form_2">
+            <form action="" method=""></form>
+          </div>
+        </div>
       </div>
     </div>
-    <script src="/js/test.js"></script>
+    <script src="./js/test.js"></script>
   </body>
 </html>
