--- a/homepage.html
+++ b/homepage.html
@@ -15,8 +15,7 @@
         <img src="./images/v1_3.png" />
         <div
           class="v3_3"
-          style="background-color: rgb(116, 175, 117); color: white"
-        >
+          style="background-color: rgb(116, 175, 117); color: white">
           News
         </div>
         <div class="v3_3">Services</div>
