sua ten container cua info va about us

--- a/test_about_us.html
+++ b/test_about_us.html
@@ -12,7 +12,7 @@
             background-color: #f4f4f4;
         }
 
-        .container {
+        .container-abu {
             max-width: 900px;
             margin: 50px auto;
             padding: 20px;
@@ -121,7 +121,7 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="container-abu">
         <h1>Chung Cư Dream Tower</h1>
         <blockquote>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut minima distinctio deserunt dolorum et pariatur sapiente dolorem ipsa. Minima natus reiciendis nulla temporibus, eum pariatur ad tempora maxime? Blanditiis, rerum.
