--- a/infor.html
+++ b/infor.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/infor.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container-info">
         <div class="profile-card">
             <div class="profile-header">
                 <img src="https://e.khoahoc.tv/photos/image/2022/01/13/lung-mat-3.jpg" alt="Profile Picture" class="profile-img">
