--- a/test_form.html
+++ b/test_form.html
@@ -107,7 +107,7 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    <div class="container-form">
       <h2>Đăng Ký Dịch Vụ</h2>
       <form action="/payment" method="POST">
         <label for="name">Tên của bạn:</label>
