--- a/homepage.html
+++ b/homepage.html
@@ -3,9 +3,13 @@
   <head>
     <link href="./css/home.css" rel="stylesheet" />
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"/>
+    <link
+      rel="stylesheet"
+      href="//use.fontawesome.com/releases/v5.0.7/css/all.css"
+    />
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://code.jquery.com/ui/1.14.0/jquery-ui.js"></script>
+    <link rel="stylesheet" href="./css/infor.css" />
     <title>Homepage</title>
   </head>
   <body>
@@ -14,7 +18,8 @@
         <img src="./images/v1_3.png" />
         <div
           class="v3_3"
-          style="background-color: rgb(116, 175, 117); color: white">
+          style="background-color: rgb(116, 175, 117); color: white"
+        >
           News
         </div>
         <div class="v3_3">Services</div>
@@ -24,12 +29,40 @@
       <div class="v3_4">
         <div class="v3_5">
           <div class="v3_6">News</div>
+          <div class="container-info">
+            <div class="profile-card">
+              <div class="profile-header">
+                <img
+                  src="https://e.khoahoc.tv/photos/image/2022/01/13/lung-mat-3.jpg"
+                  alt="Profile Picture"
+                  class="profile-img"
+                />
+                <h2 class="user-name">John Doe</h2>
+              </div>
+              <div class="profile-info">
+                <p><strong>House number: </strong> 113</p>
+                <p><strong>Email:</strong> johndoe@example.com</p>
+                <p><strong>Phone:</strong> (555) 123-4567</p>
+                <p><strong>Location:</strong> New York, USA</p>
+              </div>
+              <br /><br /><br /><br />
+              <div class="btn-container">
+                <button class="btn">Edit Profile</button>
+                <button class="btn">Logout</button>
+              </div>
+            </div>
+          </div>
           <div class="v3_7">
             <img src="./images/v3_7.jpg" />
             <div class="v3_8">
               <span class="v3_9">
-                <a href="infor.html" class="tooltip" style="color: black; text-decoration: none;" data-tooltip="User name: ARPHAM<br>Email: Oaichua@gmail.com">ARPHAM</a>
-              </a>
+                <a
+                  href="infor.html"
+                  class="tooltip"
+                  style="color: black; text-decoration: none"
+                  data-tooltip="User name: ARPHAM<br>Email: Oaichua@gmail.com"
+                  >ARPHAM</a
+                >
               </span>
             </div>
           </div>
