--- a/logIn.html
+++ b/logIn.html
@@ -11,21 +11,29 @@
   <body>
     <div class="v1_1">
       <div class="v2_0">
-        <div class="v1_3">
-          <img src="/images/v1_3.png" alt="Logo" width="500px" />
+        <div class="flip-container">
+          <div class="flipper">
+            <div class="front">
+              <img src="/images/v1_3.png" alt="Logo" width="500px" />
+            </div>
+            <div class="back">
+              <bold>Log in to your account!</bold>
+            </div>
+          </div>
         </div>
         <span class="v1_4">Welcome to </span>
         <span class="v1_5">Tenant Management System</span>
         <span class="v1_6">Please Login your account.</span>
+
         <div class="v1_7">
           <label for="email" class="v1_8">Email</label>
           <input
             class="v1_9"
             id="email"
             type="text"
-            placeholder="Enter your email ..."
-          />
+            placeholder="Enter your email ..."/>
         </div>
+
         <div class="v1_7">
           <label for="password" class="v1_8">Password</label>
           <div class="v1_9_1">
@@ -33,6 +41,7 @@
             <img src="/images/v1_15.png" />
           </div>
         </div>
+
         <div class="v2_1">
           <div class="v2_2">
             <input class="v2_3" type="checkbox" />
@@ -40,8 +49,10 @@
           </div>
           <span class="v2_5">Forgot Password?</span>
         </div>
+
         <button class="v1_16">Log In</button>
         <span class="v1_4">Or Continue With</span>
+
         <div class="v2_6">
           <a class="v2_7" href="#">
             <div class="v2_8"></div>
@@ -52,6 +63,7 @@
             <span class="v2_11">Facebook</span>
           </a>
         </div>
+
         <a class="v2_12" href="/register.html">
           New member here?
           <span style="color: rgb(69, 169, 234)">Register Now</span>
