--- a/register.html
+++ b/register.html
@@ -11,16 +11,22 @@
   <body>
     <div class="v1_1">
       <div class="v1_2">
-        <div class="v1_3">
-          <img src="/images/v1_3.png" alt="Logo" width="500px" />
+        <div class="flip-container">
+          <div class="flipper">
+            <div class="front">
+              <img src="/images/v1_3.png" alt="Logo" width="500px" />
+            </div>
+            <div class="back">
+              <bold>Register to become a member with us!</bold>
+            </div>
+          </div>
         </div>
         <span class="v1_4">Welcome to </span>
         <span class="v1_5">Tenant Management System</span>
         <span class="v1_6">Enter your information below to continue</span>
         <div class="v1_7">
           <label for="register_email" class="v1_8">Email</label>
-          <input
-            class="v1_9"
+          <input class="v1_9"
             id="register_email"
             type="text"
             placeholder="Enter your email ..."
@@ -36,18 +42,14 @@
             <input id="register_lastName" class="v1_13" type="text" required />
           </div>
           <div class="v1_11">
-            <label for="register_createPassword" class="v1_12"
-              >Create Password</label
-            >
+            <label for="register_createPassword" class="v1_12">Create Password</label>
             <div class="v1_14">
               <input id="register_createPassword" class="v1_15" type="text" />
               <img src="/images/v1_15.png" />
             </div>
           </div>
           <div class="v1_11">
-            <label for="congister_confirmPassword" class="v1_12"
-              >Confirm Password</label
-            >
+            <label for="congister_confirmPassword" class="v1_12">Confirm Password</label>
             <div class="v1_14">
               <input id="congister_confirmPassword" class="v1_15" type="text" />
               <img src="/images/v1_15.png" />
