--- a/homepage.html
+++ b/homepage.html
@@ -29,35 +29,34 @@
       <div class="v3_4">
         <div class="v3_5">
           <div class="v3_6">News</div>
-          <div class="container-info">
-            <div class="profile-card">
-              <div class="profile-header">
-                <img
-                  src="https://e.khoahoc.tv/photos/image/2022/01/13/lung-mat-3.jpg"
-                  alt="Profile Picture"
-                  class="profile-img"
-                />
-                <h2 class="user-name">John Doe</h2>
-              </div>
-              <div class="profile-info">
-                <p><strong>House number: </strong> 113</p>
-                <p><strong>Email:</strong> johndoe@example.com</p>
-                <p><strong>Phone:</strong> (555) 123-4567</p>
-                <p><strong>Location:</strong> New York, USA</p>
-              </div>
-              <br /><br /><br /><br />
-              <div class="btn-container">
-                <button class="btn">Edit Profile</button>
-                <button class="btn">Logout</button>
-              </div>
+          <div class="profile-card">
+            <div class="profile-header">
+              <img
+                src="https://e.khoahoc.tv/photos/image/2022/01/13/lung-mat-3.jpg"
+                alt="Profile Picture"
+                class="profile-img"
+              />
+              <h2 class="user-name">John Doe</h2>
+            </div>
+            <div class="profile-info">
+              <p><strong>House number: </strong> 113</p>
+              <p><strong>Email:</strong> johndoe@example.com</p>
+              <p><strong>Phone:</strong> (555) 123-4567</p>
+              <p><strong>Location:</strong> New York, USA</p>
+            </div>
+            <div class="btn-container">
+              <button class="btn">Edit Profile</button>
+              <button class="btn">Logout</button>
             </div>
           </div>
           <div class="v3_7">
-            <img src="./images/v3_7.jpg" />
+            <img
+              src="https://e.khoahoc.tv/photos/image/2022/01/13/lung-mat-3.jpg"
+              style="border-radius: 50%"
+            />
             <div class="v3_8">
               <span class="v3_9">
                 <a
-                  href="infor.html"
                   class="tooltip"
                   style="color: black; text-decoration: none"
                   data-tooltip="User name: ARPHAM<br>Email: Oaichua@gmail.com"
@@ -71,5 +70,6 @@
       </div>
     </div>
     <script src="./js/main.js"></script>
+    <script src="./js/infor.js"></script>
   </body>
 </html>
