them about us, sua info, them animation cho service

--- a/homepage.html
+++ b/homepage.html
@@ -44,9 +44,14 @@
               <p><strong>Phone:</strong> (555) 123-4567</p>
               <p><strong>Location:</strong> New York, USA</p>
             </div>
+            <br><br><br><br>
             <div class="btn-container">
-              <button class="btn">Edit Profile</button>
-              <button class="btn">Logout</button>
+              <div>
+                <button class="btn">Edit Profile</button>
+              </div>
+              <div>
+                <button class="btn">Logout</button>
+              </div>
             </div>
           </div>
           <div class="v3_7">
