--- a/homepage.html
+++ b/homepage.html
@@ -49,7 +49,7 @@
                 <button class="btn">Edit Profile</button>
               </div>
               <div>
-                <button class="btn">Logout</button>
+                <button href="./logIn.html" class="btn">Logout</button>
               </div>
             </div>
           </div>
