--- a/homepage.html
+++ b/homepage.html
@@ -46,10 +46,10 @@
             </div>
             <div class="btn-container">
               <div>
-                <button class="btn">Edit Profile</button>
+                <a href="#" class="btn">Edit Profile</a>
               </div>
               <div>
-                <button href="./logIn.html" class="btn">Logout</button>
+                <a href="./logIn.html" class="btn">Log Out</a>
               </div>
             </div>
           </div>
